src/objects/SightenAPISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>API_URL__c</fullName>
        <defaultValue>&quot;https://onboard.sighten.io:443/api/rest/&quot;</defaultValue>
        <label>API URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorization_Token__c</fullName>
        <description>The authorization token that must be included to make an API request to the Sighten API.</description>
        <label>Authorization Token</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_Token__c</fullName>
        <description>The authorization token that must be included with any attempt to call the REST service for updating credit status or signature status in Salesforce</description>
        <label>Callback Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sighten_Credit_Support_Email__c</fullName>
        <label>Sighten Credit Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sighten_Credit_Support_Phone__c</fullName>
        <label>Sighten Credit Support Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Testing_Contact_Email__c</fullName>
        <description>This field defines an email address to be used for testing purposes.  This field should be left blank in production environments.</description>
        <inlineHelpText>This field defines an email address to be used for testing purposes.  This field should be left blank in production environments.</inlineHelpText>
        <label>Testing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Testing_Contact_Phone__c</fullName>
        <description>This field defines a phone number to be used for testing purposes.  This field should be left blank in production environments.</description>
        <inlineHelpText>This field defines a phone number to be used for testing purposes.  This field should be left blank in production environments.</inlineHelpText>
        <label>Testing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <label>Sighten API Settings</label>
</CustomObject>